# NeuralNet

./: .gitignore  NeuralNet.pro  Tests.pro
GClasses/Common/: ConstexprNumConversion.h  G_Common.h  G_Defines.h  G_GeneralFunctions.h  G_MemoryFunctions.h  G_Pointer.h  G_StandartTypedefs.h  Log.h  LogDataInterpret.h  LogDefines.h  LogTests.h  LogWriter.h  MetaPrograming.h  OptionalTemplateArgs.h  StaticLog.h  StaticLog.h.autosave  Tester.h
GClasses/Link/: G_Link.h
GClasses/Map/: G_Map.h
GTests/: DynamicLog.cpp  GTests.sln  GTests.vcxproj  StaticLog.cpp  Temp.cpp  cpp.hint  pch.cpp  test.cpp
General/CIo/: CharSupport.h  Common.h  CompilerSupport.h  ConstexprString.h  File.h  FileManager.h  OpenMode.h  UniversalString.h  UnsafeFile.h  UseExamples.h
General/Common/: Common.h  Defines.h  MetaPrograming.h  Typedefs.h
General/ConstexprNumConversion/: ConstexprNumConversion.h
General/DynamicLog/: LogDataInterpret.h  LogWriter.h
General/File/: CFileManager.h  CharSupport.h  CompilerSupport.h  ConstexprString.h  File.h  (+9 more)
Libraries/: fmt.lib
Libraries/fmt/: CMakeLists.txt  fmt.cpp  fmt.h
Main/: NeuralNetwork.h  Temp.h  UnbufferedFile.h  main.cpp  mainwindow.ui
UnitTests/: AllocatorFramework.h  CFileManager.h  ConstexprString.h  DynamicLog.h  File.h  OpenMode.h  StaticFileFunctions.h  StaticLog.h  UnbufferedFile.h  UnitTests.pro  UnitTestsMain.cpp  UnsafeFile.h
build-UnitTests-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-UnitTests-Desktop_Qt_5_15_0_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release
(+67 files in other folders)
